syntax = "proto3";

option csharp_namespace = "eDoxa.Challenges.Grpc.Protos";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

service ChallengeService {
  rpc FetchChallenges(FetchChallengesRequest) returns (FetchChallengesResponse);
  rpc FindChallenge(FindChallengeRequest) returns (FindChallengeResponse);
  rpc CreateChallenge(CreateChallengeRequest) returns (CreateChallengeResponse);
  rpc SynchronizeChallenge(SynchronizeChallengeRequest) returns (SynchronizeChallengeResponse);
  rpc RegisterChallengeParticipant(RegisterChallengeParticipantRequest) returns (RegisterChallengeParticipantResponse);
}

message FetchChallengesRequest {
  Game game = 1;
  ChallengeState state = 2;
}

message FetchChallengesResponse {
  StatusDto status = 1;
  repeated ChallengeDto challenges = 2;
}

message FindChallengeRequest {
  string challengeId = 1;
}

message FindChallengeResponse {
  StatusDto status = 1;
  ChallengeDto challenge = 2;
}

message CreateChallengeRequest {
  string id = 1;
  string name = 2;
  Game game = 3;
  ChallengeType type = 4;
  int32 bestOf = 5;
  int32 entries = 6;
  int32 duration = 7;
  map<string, float> scoring = 8;
}

message CreateChallengeResponse {
  StatusDto status = 1;
  ChallengeDto challenge = 2;
}

message SynchronizeChallengeRequest {
  Game game = 1;
}

message SynchronizeChallengeResponse {
  StatusDto status = 1;
  ChallengeDto challenge = 2;
}

message RegisterChallengeParticipantRequest {
  string challengeId = 1;
  string participantId = 2;
  string gamePlayerId = 3;
}

message RegisterChallengeParticipantResponse {
  StatusDto status = 1;
  ParticipantDto participant = 2;
}

message ChallengeDto {
  string id = 1;
  string name = 2;
  Game game = 3;
  ChallengeType type = 4;
  ChallengeState state = 5;
  int32 bestOf = 6;
  int32 entries = 7;
  google.protobuf.Timestamp synchronizedAt = 8;
  map<string, float> scoring = 9;
  Timeline timeline = 10;
  repeated ParticipantDto participants = 11;

  message Timeline {
    google.protobuf.Timestamp createdAt = 1;
	google.protobuf.Timestamp startedAt = 2;
	google.protobuf.Timestamp endedAt = 3;
	google.protobuf.Timestamp closedAt = 4;
  }
}

message ParticipantDto {
  string id = 1;
  string userId = 2;
  string challengeId = 3;
  double score = 4;
  repeated MatchDto matches = 5;

  message MatchDto {
	string id = 1;
	string participantId = 2;
	double score = 3;
	repeated StatDto stats = 4;

	message StatDto {
	  string name = 1;
	  double value = 2;
	  float weighting = 3;
	  double score = 4;
	}
  }
}

enum ChallengeState {
  CHALLENGE_STATE_NONE = 0;
  CHALLENGE_STATE_INSCRIPTION = 1;
  CHALLENGE_STATE_IN_PROGRESS = 2;
  CHALLENGE_STATE_ENDED = 4;
  CHALLENGE_STATE_CLOSED = 8;
  CHALLENGE_STATE_ALL = -1;
}

enum ChallengeType {
  CHALLENGE_TYPE_NONE = 0;
  CHALLENGE_TYPE_ALL = -1;
}

enum Game {
  GAME_NONE = 0;
  GAME_LEAGUE_OF_LEGENDS = 1;
  GAME_SMITE = 2;
  GAME_STAR_CRAFT_2 = 4;
  GAME_DOTA_2 = 8;
  GAME_CSGO = 16;
  GAME_ROCKET_LEAGUE = 32;
  GAME_OVERWATCH = 64;
  GAME_FORTNITE = 128;
  GAME_PUBG = 256;
  GAME_ALL = -1;
}

message StatusDto {
  int32 code = 1;
  string message = 2;
  google.protobuf.Any details = 3;
}