syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Challenges.Responses";

import "challenges_dtos.proto";

package edoxa.services.challenges;

message FetchChallengeHistoryResponse {
  repeated ChallengeDto challenges = 1;
}

message FetchChallengesResponse {
  repeated ChallengeDto challenges = 1;
}

message FindChallengeResponse {
  ChallengeDto challenge = 1;
}

message CreateChallengeResponse {
  ChallengeDto challenge = 1;
}

message DeleteChallengeResponse {
  ChallengeDto challenge = 1;
}

message SynchronizeChallengeResponse {
  ChallengeDto challenge = 1;
}

message RegisterChallengeParticipantResponse {
  ChallengeParticipantDto participant = 1;
}

message SnapshotChallengeParticipantResponse {
  ChallengeParticipantDto participant = 1;
}